<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        app:restoreState="true"
        android:title="@string/home" />

    <item
        android:id="@+id/discoverFragment"
        android:icon="@drawable/ic_discover"
        app:restoreState="true"
        android:title="@string/discover" />

    <item
        android:id="@+id/planFragment"
        android:icon="@drawable/ic_plan"
        app:restoreState="true"
        android:title="@string/plan" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite"
        app:restoreState="true"
        android:title="@string/favorites" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        app:restoreState="true"
        android:title="@string/profile" />

</menu>
