<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.iti.mealmate.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.iti.mealmate.ui.discover.DiscoverFragment"
        android:label="@string/discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/planFragment"
        android:name="com.iti.mealmate.ui.plan.PlanFragment"
        android:label="@string/plan"
        tools:layout="@layout/fragment_plan" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.iti.mealmate.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.iti.mealmate.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>