<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.auth.login.view.LoginFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="1px"
        android:padding="24dp">
        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_logo_transparent"
            android:padding="8dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:id="@+id/login_title"
            style="@style/TextAppearance.MealMate.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_marginTop="18dp"
            android:text="@string/welcome_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo" />

        <TextView
            android:id="@+id/login_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            style="@style/TextAppearance.MealMate.Caption"
            android:text="@string/login_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title" />

        <TextView
            android:id="@+id/email_title"
            style="@style/CustomFieldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_subtitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/CustomTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:hint="@string/email_hint"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_title"
            style="@style/CustomFieldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/CustomTextField"
            app:endIconTint="@color/colorPrimary"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:hint="@string/password_hint"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_button"
            android:text="@string/forgot_password"
            android:visibility="gone"
            style="@style/CustomTextButton"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

        <FrameLayout
            android:id="@+id/login_button_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_button">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/CustomPrimaryButton"
                android:layout_width="match_parent"
                android:text="@string/login" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:indicatorSize="32dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:indicatorColor="@android:color/white" />
        </FrameLayout>


        <View
            android:id="@+id/divider_left"
            android:layout_marginTop="24dp"
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/or_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button_container" />

        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/divider_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider_right" />

        <View
            android:id="@+id/divider_right"
            android:layout_width="0dp"
            style="@style/Divider"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/or_text"
            app:layout_constraintTop_toBottomOf="@+id/login_button_container" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_button"
            style="@style/CustomOutlinedButton"
            android:text="@string/google"
            app:icon="@drawable/ic_google"
            app:layout_constraintEnd_toStartOf="@+id/facebook_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or_text"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebook_button"
            style="@style/CustomOutlinedButton"
            android:text="@string/facebook"
            app:icon="@drawable/ic_facebook"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/google_button"
            app:layout_constraintTop_toTopOf="@+id/google_button"/>

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/dont_have_account"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/signup_link"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_link"
            style="@style/CustomTextButton"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/signup_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signup_text" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/guest_button"
            style="@style/CustomTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/continue_as_guest"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>